--- a/daikoku/conf/base.conf
+++ b/daikoku/conf/base.conf
@@ -131,6 +131,17 @@ daikoku {
       interval = 600000
     }
   }
+
+  audit {
+    purge {
+      cron = false
+      cron = ${?DAIKOKU_AUDIT_PURGE_CRON}
+      interval = 1hour
+      interval = ${?DAIKOKU_AUDIT_PURGE_INTERVAL}
+      max.date = 60days
+      max.date = ${?DAIKOKU_AUDIT_PURGE_MAX_DATE}
+    }
+  }
 }
 
 mongodb {
