--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -57,6 +57,7 @@
     "redux": "4.0.5",
     "redux-logger": "3.0.6",
     "redux-thunk": "2.3.0",
+    "semver": "^7.3.5",
     "set-value": "3.0.2",
     "showdown": "1.9.1",
     "swagger-editor": "3.14.8",
