--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -76,6 +76,7 @@
     "babel-eslint": "10.1.0",
     "babel-loader": "8.2.2",
     "babel-minify-webpack-plugin": "0.3.1",
+    "compression-webpack-plugin": "6.1.1",
     "crypto-browserify": "^3.12.0",
     "css-loader": "5.0.1",
     "cypress": "7.1.0",
