--- a/.github/workflows/front-office-tests.yml
+++ b/.github/workflows/front-office-tests.yml
@@ -56,6 +56,7 @@ jobs:
       run: |
         cd daikoku/javascript
         echo "YARN CACHE CHANGED"
+        rm -rf node_modules/
         yarn install
     - name: build javascript
       run: |
