--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "@apollo/client": "^3.4.8",
     "@fortawesome/fontawesome-free": "5.15.4",
-    "@maif/react-forms": "file:.yalc/@maif/react-forms",
+    "@maif/react-forms": "1.0.1",
     "@xstate/react": "1.5.1",
     "antd": "4.16.12",
     "asciidoctor": "2.2.5",
