--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -68,37 +68,37 @@
     "xstate": "4.23.1"
   },
   "devDependencies": {
-    "@babel/core": "7.15.0",
-    "@babel/plugin-proposal-class-properties": "7.14.5",
+    "@babel/core": "7.16.0",
+    "@babel/plugin-proposal-class-properties": "7.16.0",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
-    "@babel/preset-env": "7.15.0",
-    "@babel/preset-react": "7.14.5",
+    "@babel/preset-env": "7.16.4",
+    "@babel/preset-react": "7.16.0",
     "babel-eslint": "10.1.0",
     "babel-loader": "8.2.3",
     "babel-minify-webpack-plugin": "0.3.1",
     "compression-webpack-plugin": "6.1.1",
     "crypto-browserify": "^3.12.0",
-    "css-loader": "5.0.1",
+    "css-loader": "5.2.7",
     "cypress": "7.1.0",
     "cypress-waitfor": "1.1.0",
-    "eslint": "7.32.0",
-    "eslint-plugin-react": "7.24.0",
+    "eslint": "8.3.0",
+    "eslint-plugin-react": "7.27.1",
     "file-loader": "6.2.0",
-    "mini-css-extract-plugin": "1.3.3",
-    "node-sass": "5.0.0",
-    "optimize-css-assets-webpack-plugin": "5.0.4",
+    "mini-css-extract-plugin": "1.6.2",
+    "node-sass": "6.0.1",
+    "optimize-css-assets-webpack-plugin": "6.0.1",
     "path-browserify": "^1.0.1",
-    "prettier": "2.3.2",
+    "prettier": "2.5.0",
     "raw-loader": "4.0.2",
     "sass": "1.38.0",
-    "sass-loader": "10.1.0",
+    "sass-loader": "10.1.1",
     "speed-measure-webpack-plugin": "1.5.0",
     "style-loader": "2.0.0",
     "uglifyjs-webpack-plugin": "2.2.0",
     "url-loader": "4.1.1",
-    "webpack": "4.44.2",
-    "webpack-cli": "4.8.0",
-    "webpack-dev-server": "3.11.1"
+    "webpack": "^4.46.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "4.6.0"
   },
   "babel": {
     "presets": [
