--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,7 @@ jobs:
       id: fmt
       run: |
         sh ./scripts/build.sh fmt
-        echo "set-output name=DIFF::$(git diff --numstat | wc -l)"
+        echo "::set-output name=DIFF::$(git diff --numstat | wc -l)"
 
     - name: Commit formatted sources
       if: steps.fmt.outputs.DIFF != '0'
