--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -20,11 +20,12 @@
   "dependencies": {
     "@apollo/client": "^3.5.5",
     "@fortawesome/fontawesome-free": "5.15.4",
-    "@maif/react-forms": "1.0.1",
+    "@maif/react-forms": "1.0.5",
     "@popperjs/core": "^2.11.0",
     "@xstate/react": "1.6.3",
     "antd": "4.17.2",
     "asciidoctor": "2.2.5",
+    "bcryptjs": "2.4.3",
     "bootstrap": "^5.1.3",
     "byte-converter": "0.1.4",
     "classnames": "2.3.1",
@@ -78,6 +79,7 @@
     "@babel/preset-react": "7.16.0",
     "babel-eslint": "10.1.0",
     "babel-loader": "8.2.3",
+    "buffer": "^6.0.3",
     "compression-webpack-plugin": "9.0.1",
     "crypto-browserify": "^3.12.0",
     "css-loader": "6.5.1",
