--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -20,11 +20,13 @@
   "dependencies": {
     "@apollo/client": "^3.5.5",
     "@fortawesome/fontawesome-free": "5.15.4",
+    "@maif/react-forms": "^1.0.5",
     "@popperjs/core": "^2.11.0",
     "@xstate/react": "1.6.3",
     "antd": "4.17.2",
     "asciidoctor": "2.2.5",
     "bootstrap": "^5.1.3",
+    "buffer": "^6.0.3",
     "byte-converter": "0.1.4",
     "classnames": "2.3.1",
     "connected-react-router": "6.9.2",
