--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -20,9 +20,10 @@
   "dependencies": {
     "@apollo/client": "^3.5.5",
     "@fortawesome/fontawesome-free": "5.15.4",
-    "@maif/react-forms": "1.0.8",
+    "@maif/react-forms": "1.0.12",
     "@popperjs/core": "^2.11.0",
     "@xstate/react": "1.6.3",
+    "ace-builds": "^1.4.13",
     "antd": "4.17.2",
     "asciidoctor": "2.2.5",
     "bootstrap": "^5.1.3",
@@ -76,6 +77,7 @@
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
     "@babel/preset-env": "7.16.4",
     "@babel/preset-react": "7.16.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
     "babel-eslint": "10.1.0",
     "babel-loader": "8.2.3",
     "buffer": "^6.0.3",
@@ -93,6 +95,7 @@
     "path-browserify": "^1.0.1",
     "prettier": "2.5.0",
     "raw-loader": "4.0.2",
+    "react-refresh": "^0.11.0",
     "sass": "1.44.0",
     "sass-loader": "12.3.0",
     "style-loader": "3.3.1",
