--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -73,12 +73,12 @@
   },
   "devDependencies": {
     "@babel/core": "7.16.0",
+    "@babel/eslint-parser": "^7.16.5",
     "@babel/plugin-proposal-class-properties": "7.16.0",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
     "@babel/preset-env": "7.16.4",
     "@babel/preset-react": "7.16.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
-    "babel-eslint": "10.1.0",
     "babel-loader": "8.2.3",
     "buffer": "^6.0.3",
     "compression-webpack-plugin": "9.0.1",
