--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -20,12 +20,13 @@
   "dependencies": {
     "@apollo/client": "^3.5.5",
     "@fortawesome/fontawesome-free": "5.15.4",
-    "@maif/react-forms": "1.0.5",
+    "@maif/react-forms": "^1.0.17",
     "@popperjs/core": "^2.11.0",
     "@xstate/react": "1.6.3",
     "antd": "4.17.2",
     "asciidoctor": "2.2.5",
     "bootstrap": "^5.1.3",
+    "brace": "^0.11.1",
     "byte-converter": "0.1.4",
     "classnames": "2.3.1",
     "connected-react-router": "6.9.2",
@@ -64,8 +65,8 @@
     "redux-thunk": "2.4.1",
     "set-value": "4.1.0",
     "showdown": "1.9.1",
-    "swagger-editor": "3.18.0",
-    "swagger-ui-dist": "3.38.0",
+    "swagger-editor": "4.0.6",
+    "swagger-ui-dist": "4.4.0",
     "uuid": "8.3.2",
     "whatwg-fetch": "3.6.2",
     "xstate": "4.26.1"
@@ -95,6 +96,7 @@
     "raw-loader": "4.0.2",
     "sass": "1.44.0",
     "sass-loader": "12.3.0",
+    "stream-browserify": "3.0.0",
     "style-loader": "3.3.1",
     "url-loader": "4.1.1",
     "webpack": "5.64.4",
