--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -26,6 +26,7 @@
     "antd": "4.17.2",
     "asciidoctor": "2.2.5",
     "bootstrap": "^5.1.3",
+    "brace": "^0.11.1",
     "buffer": "^6.0.3",
     "byte-converter": "0.1.4",
     "classnames": "2.3.1",
@@ -46,7 +47,7 @@
     "query-string": "7.0.1",
     "rc-util": "^5.16.0",
     "react": "17.0.2",
-    "react-ace": "9.5.0",
+    "react-ace": "9.4.3",
     "react-color": "2.19.3",
     "react-dom": "17.0.2",
     "react-feather": "2.0.9",
