--- a/.github/workflows/front-office-tests.yml
+++ b/.github/workflows/front-office-tests.yml
@@ -25,6 +25,11 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 11
+        # install node 16
+    - name: setup node
+      uses: actions/setup-node@v1
+      with:
+        node-version: '16'
     - uses: coursier/cache-action@v5
     - name: initialize backend build
       run: |
