--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -111,6 +111,8 @@ jobs:
     # clean, build doc and build DK
     - name: Build DK
       run: sh ./scripts/build.sh github
+      env:
+        NODE_OPTIONS: --max_old_space_size=4096
     # create github release
     - name: Create a Release
       id: create_release
