--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -20,10 +20,9 @@
   "dependencies": {
     "@apollo/client": "^3.5.5",
     "@fortawesome/fontawesome-free": "5.15.4",
-    "@maif/react-forms": "^1.0.17",
+    "@maif/react-forms": "1.0.18",
     "@popperjs/core": "^2.11.0",
     "@xstate/react": "1.6.3",
-    "ace-builds": "^1.4.13",
     "antd": "4.17.2",
     "asciidoctor": "2.2.5",
     "bootstrap": "^5.1.3",
