--- a/daikoku/javascript/.eslintrc.json
+++ b/daikoku/javascript/.eslintrc.json
@@ -2,9 +2,14 @@
     "env": {
         "browser": true,
         "node": true,
-        "es6": true
+        "es2021": true
     },
-    "extends": ["eslint:recommended", "plugin:react/recommended"],
+    "extends": [
+        "eslint:recommended", 
+        "plugin:react/recommended",
+        "standard",
+        "plugin:react/jsx-runtime",
+    ],
     "globals": {
         "Atomics": "readonly",
         "SharedArrayBuffer": "readonly"
@@ -13,14 +18,15 @@
         "ecmaFeatures": {
             "jsx": true
         },
-        "parser": "babel-eslint",
-        "ecmaVersion": 2018,
-        "sourceType": "module"
+        "parser": "@babel/eslint-parser",
+        "sourceType": "module",
+        "ecmaVersion": 8,
+        "requireConfigFile": false
     },
     "plugins": [
         "react"
     ],
-    "parser": "babel-eslint",
+    "parser": "@babel/eslint-parser",
     "rules": {
         "no-unused-vars": [
             "error",
@@ -52,7 +58,7 @@
     "settings": {
         "react": {
             "pragma": "React",
-            "version": "17.0.2"
+            "version": "detect"
         }
     }
 }
