--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "@apollo/client": "^3.5.5",
     "@fortawesome/fontawesome-free": "5.15.4",
-    "@maif/react-forms": "^1.0.17",
+    "@maif/react-forms": "^1.0.29",
     "@popperjs/core": "^2.11.0",
     "@xstate/react": "1.6.3",
     "antd": "4.17.2",
@@ -69,22 +69,23 @@
     "swagger-ui-dist": "4.4.0",
     "uuid": "8.3.2",
     "whatwg-fetch": "3.6.2",
-    "xstate": "4.26.1"
+    "xstate": "4.27.0"
   },
   "devDependencies": {
     "@babel/core": "7.16.0",
+    "@babel/eslint-parser": "^7.16.5",
     "@babel/plugin-proposal-class-properties": "7.16.0",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
     "@babel/preset-env": "7.16.4",
     "@babel/preset-react": "7.16.0",
-    "babel-eslint": "10.1.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
     "babel-loader": "8.2.3",
     "buffer": "^6.0.3",
     "compression-webpack-plugin": "9.0.1",
     "crypto-browserify": "^3.12.0",
     "css-loader": "6.5.1",
     "css-minimizer-webpack-plugin": "3.2.0",
-    "cypress": "9.1.0",
+    "cypress": "9.5.1",
     "cypress-waitfor": "1.1.0",
     "eslint": "8.3.0",
     "eslint-plugin-react": "7.27.1",
@@ -94,6 +95,7 @@
     "path-browserify": "^1.0.1",
     "prettier": "2.5.0",
     "raw-loader": "4.0.2",
+    "react-refresh": "^0.11.0",
     "sass": "1.44.0",
     "sass-loader": "12.3.0",
     "stream-browserify": "3.0.0",
