--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -15,12 +15,13 @@
     "test:cypress": "cypress run --record --key $CYPRESS_RECORD_KEY",
     "cypress:report:merge": "mochawesome-merge cypress/results/json/*.json > cypress/results/index.json",
     "cypress:report:generate": "marge cypress/results/index.json --reportDir report --assetsDir report/assets --reportPageTitle index.html",
-    "cypress:start:backend": "cd .. && sbt  'run -Dhttp.port=9000 -Ddaikoku.init.data.from=javascript/cypress/cypress-test-export.ndjson'"
+    "cypress:start:backend": "cd .. && sbt  'run -Dhttp.port=9000 -Ddaikoku.init.data.from=javascript/cypress/cypress-test-export.ndjson'",
+    "cypress:start:backend-dev": "cd .. && sbt  'run -Dhttp.port=9000 -Ddaikoku.mode=Dev -Ddaikoku.init.data.from=javascript/cypress/cypress-test-export.ndjson'"
   },
   "dependencies": {
     "@apollo/client": "^3.5.5",
     "@fortawesome/fontawesome-free": "5.15.4",
-    "@maif/react-forms": "^1.0.30",
+    "@maif/react-forms": "^1.0.33",
     "@popperjs/core": "^2.11.0",
     "@xstate/react": "1.6.3",
     "antd": "4.17.2",
