--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -7,7 +7,8 @@
   "private": true,
   "scripts": {
     "prettier": "prettier --write --single-quote --trailing-comma es5 --print-width 100 --tab-width 2 --jsx-bracket-same-line \"src/**/*.js\"",
-    "test:eslint": "eslint src/ --ext .js --ext .jsx",
+    "lint": "eslint \"src/**/*.{js,jsx}\"",
+    "lint:fix": "eslint \"src/**/*.{js,jsx}\" --fix",
     "start": "webpack serve --port 3000 --host 0.0.0.0 --live-reload --color --mode development",
     "watch": "webpack --watch --mode development --live-reload -d --color",
     "build": "rm -rf ../public/react-app && mkdir ../public/react-app && webpack --mode production --progress",
@@ -21,7 +22,7 @@
   "dependencies": {
     "@apollo/client": "^3.6.4",
     "@fortawesome/fontawesome-free": "6.1.1",
-    "@maif/react-forms": "^1.2.13",
+    "@maif/react-forms": "^1.3.0",
     "@popperjs/core": "^2.11.5",
     "@xstate/react": "3.0.0",
     "antd": "4.20.5",
@@ -89,7 +90,8 @@
     "cypress": "^10.0.3",
     "cypress-waitfor": "1.1.0",
     "eslint": "8.15.0",
-    "eslint-plugin-react": "7.29.4",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-react": "^7.30.1",
     "file-loader": "6.2.0",
     "mini-css-extract-plugin": "2.6.0",
     "node-sass": "7.0.1",
