--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -103,6 +103,9 @@
     "sass-loader": "12.6.0",
     "stream-browserify": "3.0.0",
     "style-loader": "3.3.1",
+    "ts-loader": "^9.3.1",
+    "ts-migrate": "^0.1.31",
+    "typescript": "^4.7.4",
     "url-loader": "4.1.1",
     "webpack": "5.72.1",
     "webpack-bundle-analyzer": "^4.5.0",
