--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -81,10 +81,13 @@
     "@babel/preset-env": "7.17.12",
     "@babel/preset-react": "7.17.12",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.6",
+    "@types/js-md5": "^0.4.3",
     "@types/react": "^18.0.15",
+    "@types/react-color": "^3.0.6",
     "@types/react-dom": "^18.0.6",
     "@types/react-redux-toastr": "^7.6.2",
     "@types/react-table": "^7.7.12",
+    "@types/swagger-ui-dist": "^3.30.1",
     "@types/uuid": "^8.3.4",
     "babel-loader": "8.2.5",
     "buffer": "^6.0.3",
