--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -22,7 +22,7 @@
   "dependencies": {
     "@apollo/client": "^3.6.4",
     "@fortawesome/fontawesome-free": "6.1.1",
-    "@maif/react-forms": "^1.3.1-rc.1",
+    "@maif/react-forms": "^1.3.1-rc.7",
     "@popperjs/core": "^2.11.5",
     "@xstate/react": "3.0.0",
     "antd": "4.20.5",
@@ -81,12 +81,14 @@
     "@babel/preset-env": "7.17.12",
     "@babel/preset-react": "7.17.12",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.6",
+    "@types/jquery": "^3.5.14",
     "@types/js-md5": "^0.4.3",
     "@types/react": "^18.0.15",
     "@types/react-color": "^3.0.6",
     "@types/react-dom": "^18.0.6",
     "@types/react-redux-toastr": "^7.6.2",
     "@types/react-table": "^7.7.12",
+    "@types/set-value": "^4.0.1",
     "@types/swagger-ui-dist": "^3.30.1",
     "@types/uuid": "^8.3.4",
     "babel-loader": "8.2.5",
