--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/fontawesome-free": "6.1.1",
     "@maif/react-forms": "^1.3.1-rc.8",
     "@popperjs/core": "^2.11.5",
+    "@tanstack/react-query": "^4.0.10",
     "@xstate/react": "3.0.0",
     "antd": "4.20.5",
     "asciidoctor": "2.2.6",
