--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -104,7 +104,7 @@
     "eslint-plugin-react": "^7.30.1",
     "file-loader": "6.2.0",
     "mini-css-extract-plugin": "2.6.0",
-    "node-sass": "7.0.1",
+    "node-sass": "^7.0.3",
     "path-browserify": "^1.0.1",
     "prettier": "2.6.2",
     "raw-loader": "4.0.2",
