--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -24,7 +24,7 @@
     "@fortawesome/fontawesome-free": "6.1.1",
     "@maif/react-forms": "^1.3.1-rc.15",
     "@popperjs/core": "^2.11.5",
-    "@tanstack/react-query": "^4.0.10",
+    "react-query": "^3.39.2",
     "@xstate/react": "3.0.0",
     "antd": "4.20.5",
     "asciidoctor": "2.2.6",
