--- a/.github/workflows/front-office-tests.yml
+++ b/.github/workflows/front-office-tests.yml
@@ -14,9 +14,18 @@ jobs:
 
     services:
       mongodb:
-        image: mongo
+        image: postgres
+        env:
+          POSTGRES_DB: daikoku
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_USER: daikoku
         ports:
-        - 27017:27017
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
 
     steps:
     - name: Checkout
@@ -71,6 +80,9 @@ jobs:
         NODE_OPTIONS: --max_old_space_size=4096
     - name: Cypress run and publish report
       uses: cypress-io/github-action@v2
+      env: 
+        DAIKOKU_POSTGRES_DATABASE: daikoku
+        DAIKOKU_POSTGRES_USERNAME: daikoku
       with:
         browser: chrome
         headless: true   
