front office run in postgres - oops II

--- a/daikoku/conf/application.test.conf
+++ b/daikoku/conf/application.test.conf
@@ -3,12 +3,14 @@ include "base.conf"
 daikoku {
   mode = "dev"
   signingKey = "secret"
+  storage = "postgres"
+
+  postgres {
+    database = "daikoku_test"
+  }
+
 
   tenants {
     provider = "hostname"
   }
-}
-
-mongodb {
-  uri = "mongodb://localhost:27017/daikoku-tests"
 }
