--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -20,13 +20,16 @@
     "cypress:start:backend-dev": "cd .. && sbt  'run -Dhttp.port=9000 -Ddaikoku.mode=Dev -Ddaikoku.init.data.from=javascript/cypress/cypress-test-export.ndjson'"
   },
   "dependencies": {
-    "@apollo/client": "^3.6.4",
+    "@apollo/client": "^3.7.0",
+    "@dnd-kit/core": "6.0.5",
+    "@dnd-kit/sortable": "7.0.1",
+    "@dnd-kit/utilities": "3.2.0",
     "@fortawesome/fontawesome-free": "6.2.0",
     "@maif/react-forms": "^1.3.1-rc.16",
     "@popperjs/core": "^2.11.5",
     "react-query": "^3.39.2",
     "@xstate/react": "3.0.0",
-    "antd": "4.20.5",
+    "antd": "4.23.6",
     "asciidoctor": "2.2.6",
     "bootstrap": "^5.1.3",
     "brace": "^0.11.1",
@@ -55,9 +58,9 @@
     "react-modal": "3.15.1",
     "react-paginate": "8.1.3",
     "react-redux": "8.0.1",
-    "react-redux-toastr": "7.6.8",
+    "react-redux-toastr": "7.6.10",
     "react-router-dom": "6.4.1",
-    "react-select": "5.3.2",
+    "react-select": "5.5.2",
     "react-step-wizard": "5.3.11",
     "react-table": "7.8.0",
     "react-tooltip": "4.2.21",
@@ -67,10 +70,9 @@
     "redux-thunk": "2.4.1",
     "set-value": "4.1.0",
     "showdown": "2.1.0",
-    "swagger-editor": "4.2.2",
+    "swagger-editor": "4.4.3",
     "swagger-ui-dist": "4.11.1",
     "uuid": "8.3.2",
-    "whatwg-fetch": "3.6.2",
     "xstate": "^4.32.1"
   },
   "devDependencies": {
