--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -27,6 +27,8 @@
     "@fortawesome/fontawesome-free": "6.2.0",
     "@maif/react-forms": "^1.3.1-rc.16",
     "@popperjs/core": "^2.11.5",
+    "@tanstack/react-query": "4.19.1",
+    "@tanstack/react-table": "^8.7.0",
     "@xstate/react": "3.0.0",
     "antd": "4.23.6",
     "asciidoctor": "2.2.6",
@@ -55,13 +57,11 @@
     "react-feather": "2.0.10",
     "react-modal": "3.15.1",
     "react-paginate": "8.1.3",
-    "react-query": "^3.39.2",
     "react-redux": "8.0.1",
     "react-redux-toastr": "7.6.10",
     "react-router-dom": "6.4.1",
     "react-select": "5.5.2",
     "react-step-wizard": "5.3.11",
-    "react-table": "7.8.0",
     "react-tooltip": "5.0.0",
     "recharts": "2.1.13",
     "redux": "4.2.0",
