mongoDb is now deprecated
add an evolution to remove team.subscriptions

--- a/daikoku/conf/base.conf
+++ b/daikoku/conf/base.conf
@@ -8,7 +8,7 @@ daikoku {
   exposedOn = ${http.port}
   exposedOn = ${?DAIKOKU_EXPOSED_ON}
 
-  storage = "mongo"
+  storage = "postgres"
   storage = ${?DAIKOKU_STORAGE}
 
   postgres {
