--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,9 +29,10 @@ jobs:
     - uses: actions/checkout@v2.2.0
     # setup java to use sbt
     - name: Set up JDK 11
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v3
       with:
-        java-version: 11
+        distribution: 'temurin'
+        java-version: '11'
     #test DK
     - uses: coursier/cache-action@v5
     - name: test
