--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -17,7 +17,7 @@
     "cypress:report:merge": "mochawesome-merge cypress/results/json/*.json > cypress/results/index.json",
     "cypress:report:generate": "marge cypress/results/index.json --reportDir report --assetsDir report/assets --reportPageTitle index.html",
     "cypress:start:backend": "cd .. && sbt  'run -Dhttp.port=9000 -Ddaikoku.storage=postgres -Ddaikoku.postgres.database=daikoku -Ddaikoku.postgres.user=postgres -Ddaikoku.init.data.from=javascript/cypress/cypress-test-export.ndjson'",
-    "cypress:start:backend-dev": "cd .. && sbt  'run -Dhttp.port=9000 -Ddaikoku.mode=Dev -Ddaikoku.init.data.from=javascript/cypress/cypress-test-export.ndjson'"
+    "cypress:start:backend-dev": "cd .. && sbt  'run -Dhttp.port=9000 -Ddaikoku.mode=Dev -Ddaikoku.storage=postgres -Ddaikoku.postgres.database=daikoku -Ddaikoku.postgres.user=postgres -Ddaikoku.init.data.from=javascript/cypress/cypress-test-export.ndjson'"
   },
   "dependencies": {
     "@apollo/client": "^3.7.2",
@@ -97,7 +97,7 @@
     "crypto-browserify": "^3.12.0",
     "css-loader": "6.7.3",
     "css-minimizer-webpack-plugin": "4.2.2",
-    "cypress": "^12.1.0",
+    "cypress": "^12.2.0",
     "cypress-waitfor": "1.1.0",
     "eslint": "8.29.0",
     "eslint-plugin-import": "^2.26.0",
