--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -30,11 +30,12 @@
     "@tanstack/react-query": "4.20.2",
     "@tanstack/react-table": "^8.7.3",
     "@xstate/react": "3.0.1",
-    "antd": "5.0.7",
+    "antd": "5.1.2",
     "asciidoctor": "2.2.6",
     "bootstrap": "^5.2.3",
     "brace": "^0.11.1",
     "classnames": "2.3.2",
+    "dayjs": "1.11.7",
     "es6-shim": "0.35.6",
     "get-value": "3.0.1",
     "graphql": "^16.6.0",
