--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,16 +34,17 @@ jobs:
       id: fmt
       run: |
         sh ./scripts/build.sh fmt
-        echo "::set-output name=diff::$(git diff --numstat | wc -l)"
+    - id: get-diff-format-sources
+      uses: technote-space/get-diff-action@v6
     - name: Commit formatted sources
-      if: ${{steps.fmt.outputs.diff != '0'}}
+      if: env.GIT_DIFF
       run: |
         git config --local user.email "daikoku-github-actions@users.noreply.github.com"
         git config --local user.name "daikoku-github-actions"
         git add --all
         git commit -am "Format sources before release"
     - name: Push formatted sources
-      if: ${{steps.fmt.outputs.diff != '0'}}
+      if: env.GIT_DIFF
       uses: ad-m/github-push-action@master
       with:
         branch: ${{ github.ref }}
@@ -60,8 +61,10 @@ jobs:
         sh ./scripts/build.sh manual
         echo "::set-output name=diff::$(git diff --numstat | wc -l)"
         cd ..
+    - id: get-diff-manual
+      uses: technote-space/get-diff-action@v6
     - name: Commit manual
-      if: ${{steps.manual.outputs.diff != '0'}}
+      if: env.GIT_DIFF
       run: |
         git config --local user.email "daikoku-github-actions@users.noreply.github.com"
         git config --local user.name "daikoku-github-actions"
@@ -69,7 +72,7 @@ jobs:
         git commit -am "Update documentation before release"
     - name: Push manual
       uses: ad-m/github-push-action@master
-      if: ${{steps.manual.outputs.diff != '0'}}
+      if: env.GIT_DIFF
       with:
         branch: ${{ github.ref }}
         github_token: ${{ secrets.GITHUB_TOKEN}}
