--- a/.github/workflows/front-office-tests.yml
+++ b/.github/workflows/front-office-tests.yml
@@ -49,7 +49,7 @@ jobs:
     - name: Get yarn cache directory path
       id: yarn-cache-dir-path
       run: |
-          echo "::set-output name=dir::$(yarn cache dir)"
+          echo "dir=$(yarn cache dir)" >> $GITHUB_OUTPUT
     - name: CACHE ACTION
       uses: actions/cache@v2
       env:
