FIX tests (lol)

--- a/.github/workflows/front-office-tests.yml
+++ b/.github/workflows/front-office-tests.yml
@@ -16,7 +16,7 @@ jobs:
       postgres:
         image: postgres
         env:
-          POSTGRES_DB: daikoku
+          POSTGRES_DB: daikoku_test
           POSTGRES_PASSWORD: postgres
           POSTGRES_USER: postgres
         ports:
