added some things

--- a/daikoku/conf/base.conf
+++ b/daikoku/conf/base.conf
@@ -5,6 +5,9 @@ daikoku {
   signingKey = "secret"
   signingKey = ${?DAIKOKU_SIGNING_KEY}
 
+  cypherSecret = "cypherSecret"
+  cypherSecret = ${?DAIKOKU_CYPHER_SECRET}
+
   exposedOn = ${http.port}
   exposedOn = ${?DAIKOKU_EXPOSED_ON}
 
