FIX #599 - better  admin api openapi

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,12 +48,13 @@ jobs:
       with:
         branch: ${{ github.ref }}
         github_token: ${{ secrets.GITHUB_TOKEN}}
-    #Build manual with right version
+    #Build manual with right version (and update version in openapi)
     - name: build manual
       id: manual
       run: |
         find ./manual/src/main/paradox -type f -name '*.md' | xargs node ./scripts/version.js ${{ github.event.inputs.lastVersion }} ${{ github.event.inputs.releaseversion }}
         find ./docs -type f -name '*.html' -d 1 | xargs node ./scripts/version.js ${{ github.event.inputs.lastVersion }} ${{ github.event.inputs.releaseversion }}
+        find ./daikoku/public/swaggers -type f -name 'admin-api-openapi.*' -d 1 | xargs node ./scripts/version.js ${{ github.event.inputs.lastVersion }} ${{ github.event.inputs.releaseversion }}
         cd manual
         sbt "release with-defaults release-version ${{ github.event.inputs.releaseversion }}"
         cd ..
