--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -65,6 +65,7 @@
     "react-step-wizard": "5.3.11",
     "react-tooltip": "5.1.3",
     "recharts": "2.2.0",
+    "redoc": "2.1.2",
     "redux": "4.2.0",
     "redux-logger": "3.0.6",
     "redux-thunk": "2.4.2",
