--- a/.github/workflows/front-office-tests.yml
+++ b/.github/workflows/front-office-tests.yml
@@ -36,9 +36,9 @@ jobs:
         java-version: 11
         # install node lts
     - name: setup node
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v3
       with:
-        node-version: 'lts'
+        node-version: lts
     - uses: coursier/cache-action@v5
     - name: initialize backend build
       run: |
