--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,9 +26,11 @@ jobs:
     - uses: coursier/cache-action@v5
     # install node 16
     - name: setup node
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v3
       with:
-        node-version: '16'
+        node-version: latest
+        cache: 'npm'
+        cache-dependency-path: daikoku/javascript/package-lock.json
     #format sources
     - name: format sources
       id: fmt
@@ -49,12 +51,23 @@ jobs:
         branch: ${{ github.ref }}
         github_token: ${{ secrets.GITHUB_TOKEN}}
     #Build manual with right version (and update version in openapi)
-    - name: build manual
-      id: manual
+    - name: update version number
+      id: version
       run: |
         find ./manual/src/main/paradox -type f -name '*.md' | xargs node ./scripts/version.js ${{ github.event.inputs.lastVersion }} ${{ github.event.inputs.releaseversion }}
         find ./docs -type f -name '*.html' -d 1 | xargs node ./scripts/version.js ${{ github.event.inputs.lastVersion }} ${{ github.event.inputs.releaseversion }}
         find ./daikoku/public/swaggers -type f -name 'admin-api-openapi.*' -d 1 | xargs node ./scripts/version.js ${{ github.event.inputs.lastVersion }} ${{ github.event.inputs.releaseversion }}
+        echo "diff=$(git diff --numstat | wc -l)" >> $GITHUB_OUTPUT
+    - name: Commit formatted sources
+      if: steps.version.outputs.diff != '0'
+      run: |
+        git config --local user.email "daikoku-github-actions@users.noreply.github.com"
+        git config --local user.name "daikoku-github-actions"
+        git add --all
+        git commit -am "Update version number before release"
+    - name: build manual
+      id: manual
+      run: |
         cd manual
         sbt "release with-defaults release-version ${{ github.event.inputs.releaseversion }}"
         cd ..
@@ -91,24 +104,6 @@ jobs:
       uses: actions/checkout@v2.2.0
       with: 
         ref: 'v${{ github.event.inputs.releaseVersion }}'
-    - name: Get yarn cache directory path
-      id: yarn-cache-dir-path
-      run: |
-          echo "dir=$(yarn cache dir)" >> $GITHUB_OUTPUT
-    - name: CACHE ACTION
-      uses: actions/cache@v2
-      env:
-          cache-version: v1
-      id: yarn-cache
-      with:
-        path: |
-            ${{ steps.yarn-cache-dir-path.outputs.dir }}
-            **/node_modules
-        key: ${{ runner.os }}-yarn-${{ env.cache-version }}-${{ hashFiles('**/yarn.lock') }}
-        restore-keys: |
-            ${{ runner.os }}-yarn-${{ env.cache-version }}-
-            ${{ runner.os }}-yarn-
-            ${{ runner.os }}-
     # clean, build doc and build DK
     - name: Build DK
       run: sh ./scripts/build.sh github
