Upgrade play & disable http2

--- a/daikoku/conf/base.conf
+++ b/daikoku/conf/base.conf
@@ -157,6 +157,8 @@ http.port = 8080
 http.port = ${?PORT}
 https.port = disabled
 https.port = ${?HTTPS_PORT}
+http2.enabled = no
+http2.enabled = ${?HTTP2_ENABLED}
 
 play {
   application.loader = "fr.maif.otoroshi.daikoku.DaikokuLoader"
