--- a/.github/workflows/front-office-tests.yml
+++ b/.github/workflows/front-office-tests.yml
@@ -30,10 +30,11 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v4
-    - name: Set up JDK 11
-      uses: actions/setup-java@v1
+    - name: Set up JDK 21
+      uses: actions/setup-java@v3
       with:
-        java-version: 11
+        distribution: 'temurin'
+        java-version: '21'
         # install node lts
     - name: setup node
       uses: actions/setup-node@v3
