--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,13 +18,13 @@ jobs:
     steps:
     - uses: actions/checkout@v2.2.0
     # setup java to use sbt (?)
-    - name: Set up JDK 11
+    - name: Set up JDK 21
       uses: actions/setup-java@v3
       with:
         distribution: 'temurin'
-        java-version: '11'
+        java-version: '21'
     - uses: coursier/cache-action@v5
-    # install node 16
+    # install node lts
     - name: setup node
       uses: actions/setup-node@v3
       with:
