--- a/.github/workflows/update-dev-manual.yml
+++ b/.github/workflows/update-dev-manual.yml
@@ -17,6 +17,9 @@ jobs:
         with:
           node-version: '18.x'
           cache: 'npm'
+      - name: copy openapi
+        id: openapi
+        run: cp ./public/swaggers/admin-api-openapi.yaml ./manual/static/admin-api-openapi.yaml
       - name: Generate dev documentation website
         id: doc
         run: |
