--- a/manual/package.json
+++ b/manual/package.json
@@ -22,7 +22,8 @@
     "docusaurus-lunr-search": "^3.3.0",
     "prism-react-renderer": "^2.1.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "redocusaurus": "^2.0.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.0.0",
