Better release note - add technical issues

--- a/.github/release-note.yml
+++ b/.github/release-note.yml
@@ -6,6 +6,9 @@ changelog:
   - title: "Bugs"
     emoji: ":bug:"
     labels: ["fix", "bug"]
+  - title: "technical"
+    emoji: ":wrench:"
+    labels: ["technical"]
 
   issues:
     exclude:
