--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,35 +64,35 @@ jobs:
         git config --local user.name "daikoku-github-actions"
         git add --all
         git commit -am "Update version number before release"
-    - name: build manual
-      id: manual
-      run: |
-        cd manual
-        sbt "release with-defaults release-version ${{ github.event.inputs.releaseversion }}"
-        cd ..
-        sh ./scripts/build.sh manual
-        echo "diff=$(git diff --numstat | wc -l)" >> $GITHUB_OUTPUT
-        cd ..
-    - name: Commit manual
-      if: steps.manual.outputs.diff != '0'
-      run: |
-        git config --local user.email "daikoku-github-actions@users.noreply.github.com"
-        git config --local user.name "daikoku-github-actions"
-        git add --all
-        git commit -am "Update documentation before release"
-    - name: Push manual
-      uses: ad-m/github-push-action@master
-      if: steps.manual.outputs.diff != '0'
-      with:
-        branch: ${{ github.ref }}
-        github_token: ${{ secrets.GITHUB_TOKEN}}
+    # - name: build manual
+    #   id: manual
+    #   run: |
+    #     cd manual
+    #     sbt "release release-version ${{ github.event.inputs.releaseversion }}"
+    #     cd ..
+    #     sh ./scripts/build.sh manual
+    #     echo "diff=$(git diff --numstat | wc -l)" >> $GITHUB_OUTPUT
+    #     cd ..
+    # - name: Commit manual
+    #   if: steps.manual.outputs.diff != '0'
+    #   run: |
+    #     git config --local user.email "daikoku-github-actions@users.noreply.github.com"
+    #     git config --local user.name "daikoku-github-actions"
+    #     git add --all
+    #     git commit -am "Update documentation before release"
+    # - name: Push manual
+    #   uses: ad-m/github-push-action@master
+    #   if: steps.manual.outputs.diff != '0'
+    #   with:
+    #     branch: ${{ github.ref }}
+    #     github_token: ${{ secrets.GITHUB_TOKEN}}
     # release sbt (with auto commit tag)
     - name: release sbt
       run: |
         git config --local user.email "daikoku-github-actions@users.noreply.github.com"
         git config --local user.name "daikoku-github-actions"
         cd daikoku
-        sbt "release with-defaults release-version ${{ github.event.inputs.releaseVersion }} next-version ${{ github.event.inputs.nextVersion }}"
+        sbt "release release-version ${{ github.event.inputs.releaseVersion }} next-version ${{ github.event.inputs.nextVersion }}"
     - name: push tag
       uses: ad-m/github-push-action@master
       with:
