--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -39,6 +39,10 @@ hyper-tls = "0.5.0"
 base64 = "0.21.5"
 futures-channel = "0.3.29"
 
+[dependencies.uuid]
+version = "1.7.0"
+features = ["v4", "fast-rng", "macro-diagnostics"]
+
 [dev-dependencies]
 serial_test = "2.0.0"
 assert_cmd = "2.0.12"
