--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -38,6 +38,7 @@ once_cell = "1.18.0"
 hyper-tls = "0.5.0"
 base64 = "0.21.5"
 futures-channel = "0.3.29"
+ini = "1.3.0"
 
 [dependencies.uuid]
 version = "1.7.0"
