fix issues + starting frontendInteractions

--- a/daikoku/conf/base.conf
+++ b/daikoku/conf/base.conf
@@ -14,6 +14,14 @@ daikoku {
   storage = "postgres"
   storage = ${?DAIKOKU_STORAGE}
 
+  anonymous-reporting {
+      enabled = true
+      enabled = ${?DAIKOKU_ANONYMOUS_REPORTING_ENABLED}
+      url = "http://localhost:9000/daikoku/ingest"
+      timeout = 60000
+      timeout = ${?DAIKOKU_ANONYMOUS_REPORTING_TIMEOUT}
+  }
+
   postgres {
       host = "localhost"
       host = ${?DAIKOKU_POSTGRES_HOST}
