using folder structures to route

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -42,6 +42,7 @@ configparser = "3.0.4"
 async-recursion = "1.0.5"
 serde_yaml = "0.9.32"
 void = "1.0.2"
+walkdir = "2.5.0"
 
 [dependencies.uuid]
 version = "1.7.0"
