Fix#635: [JSON-PATCH] Modification of Message Error Type

--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -32,6 +32,7 @@
     "@xstate/react": "3.2.2",
     "antd": "5.14.1",
     "asciidoctor": "3.0.4",
+    "asn1": "^0.2.6",
     "bootstrap": "^5.3.2",
     "brace": "^0.11.1",
     "classnames": "2.5.1",
@@ -73,6 +74,7 @@
     "showdown": "2.1.0",
     "swagger-editor": "4.12.1",
     "swagger-ui-dist": "5.11.6",
+    "vm-browserify": "^1.1.2",
     "xstate": "^4.38.3"
   },
   "devDependencies": {
@@ -105,12 +107,11 @@
     "eslint-plugin-react": "^7.33.2",
     "file-loader": "6.2.0",
     "mini-css-extract-plugin": "2.8.0",
-    "node-sass": "^9.0.0",
     "path-browserify": "^1.0.1",
     "prettier": "3.2.5",
     "raw-loader": "4.0.2",
     "react-refresh": "^0.14.0",
-    "sass": "1.70.0",
+    "sass": "^1.70.0",
     "sass-loader": "14.1.0",
     "stream-browserify": "3.0.0",
     "style-loader": "3.3.4",
