--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -44,6 +44,7 @@ serde_yaml = "0.9.32"
 void = "1.0.2"
 walkdir = "2.5.0"
 webbrowser = "0.8.13"
+testcontainers = "0.15.0"
 
 [dependencies.uuid]
 version = "1.7.0"
