--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -12,13 +12,7 @@
     "start": "webpack serve --port 3000 --host 0.0.0.0 --live-reload --color --mode development",
     "watch": "webpack --watch --mode development --live-reload -d --color",
     "build": "rm -rf ../public/react-app && mkdir ../public/react-app && webpack --mode production --progress",
-    "test": "playwright test --workers 1 --trace on",
-    "cypress": "cypress open",
-    "test:cypress": "cypress run --record --key $CYPRESS_RECORD_KEY",
-    "cypress:report:merge": "mochawesome-merge cypress/results/json/*.json > cypress/results/index.json",
-    "cypress:report:generate": "marge cypress/results/index.json --reportDir report --assetsDir report/assets --reportPageTitle index.html",
-    "cypress:start:backend": "cd .. && sbt  'run -Dhttp.port=9000 -Ddaikoku.storage=postgres -Ddaikoku.postgres.database=daikoku_test -Ddaikoku.postgres.user=postgres -Ddaikoku.init.data.from=javascript/cypress/cypress-test-export.ndjson'",
-    "cypress:start:backend-dev": "cd .. && sbt  'run -Dhttp.port=9000 -Ddaikoku.mode=Dev -Ddaikoku.storage=postgres -Ddaikoku.postgres.database=daikoku_test -Ddaikoku.postgres.user=postgres -Ddaikoku.init.data.from=javascript/cypress/cypress-test-export.ndjson'"
+    "test": "playwright test --workers 1 --trace on"
   },
   "dependencies": {
     "@apollo/client": "^3.9.4",
