Rename Super admin as Daikoku Admin

--- a/daikoku/conf/base.conf
+++ b/daikoku/conf/base.conf
@@ -67,7 +67,7 @@ daikoku {
     host = "localhost"
     host = ${?DAIKOKU_INIT_HOST}
     admin {
-      name = "Super admin"
+      name = "Daikoku admin"
       name = ${?DAIKOKU_INIT_ADMIN_NAME}
       email = "admin@daikoku.io"
       email = ${?DAIKOKU_INIT_ADMIN_EMAIL}
