--- a/daikoku/conf/base.conf
+++ b/daikoku/conf/base.conf
@@ -13,6 +13,8 @@ daikoku {
 
   storage = "postgres"
   storage = ${?DAIKOKU_STORAGE}
+  containerized = false
+  containerized = ${?IS_CONTAINERIZED}
 
   anonymous-reporting {
       enabled = true
